# one_assert

./: .gitignore  Cargo.toml  Changelog.md  LICENSE-MIT  Readme.md  test.sh  view_output.sh
.github/workflows/: test.yml
src/: error.rs  lib.rs  utils.rs
tests/: expr.rs  negation.rs  tests.rs
tests/fail/: malformed_expr.rs  malformed_expr.stderr  malformed_parameters.rs  malformed_parameters.stderr  missing_params.rs  missing_params.stderr  no_debug.rs  no_debug.stderr  not_bool.rs  not_bool.stderr
tests/fail/expr/: array.rs  array.stderr  assign.rs  assign.stderr  async.rs  async.stderr  await.rs  await.stderr  await2.rs  await2.stderr  binary.rs  binary.stderr  block.rs  block.stderr  break.rs  break.stderr  cast.rs  cast.stderr  closure.rs  closure.stderr  const.rs  const.stderr  continue.rs  continue.stderr  field.rs  field.stderr  forloop.rs  forloop.stderr  group.rs.no  if.rs  if.stderr  index.rs  index.stderr  infer.rs  infer.stderr  let.rs  let.stderr  lit.rs  lit.stderr  loop.rs  (+31 more)
tests/fail/expr/nightly/: call.rs  call.stderr  methodcall.rs  methodcall.stderr
tests/fail/expr/stable/: call.stderr  methodcall.rs  methodcall.stderr
